# ChangeLog for x11-libs/cairo
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.180 2008/04/11 23:50:59 cardoe Exp $

  11 Apr 2008; Doug Goldstein <cardoe@gentoo.org> cairo-1.6.4.ebuild:
  I fail. Forgot to remove epatch calls

*cairo-1.6.4 (11 Apr 2008)

  11 Apr 2008; Doug Goldstein <cardoe@gentoo.org> -cairo-1.6.2.ebuild,
  +cairo-1.6.4.ebuild:
  bump to cairo 1.6.4 which includes the previous 1.6.2 patches

*cairo-1.6.2 (11 Apr 2008)

  11 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  +files/cairo-1.6.2-fix-g++-linking.patch, +cairo-1.6.2.ebuild:
  add working cairo 1.6.x release with g++ linking patch and mutex crash fix

*cairo-1.5.20 (08 Apr 2008)

  08 Apr 2008; Doug Goldstein <cardoe@gentoo.org> -cairo-1.5.16.ebuild,
  +cairo-1.5.20.ebuild:
  add latest cairo 1.6 release candidate

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> cairo-1.4.14.ebuild:
  alpha/ia64/sparc/x86 stable wrt #216774

  08 Apr 2008; Jeroen Roovers <jer@gentoo.org> cairo-1.4.14.ebuild:
  Stable for HPPA (bug #216774).

  07 Apr 2008; Samuli Suominen <drac@gentoo.org> cairo-1.4.14.ebuild:
  stable amd64, bug 216774

  07 Apr 2008; Brent Baude <ranger@gentoo.org> cairo-1.4.14.ebuild:
  stable ppc, bug 216774

  07 Apr 2008; Brent Baude <ranger@gentoo.org> cairo-1.4.14.ebuild:
  stable ppc64, bug 216774

*cairo-1.5.18 (06 Apr 2008)

  06 Apr 2008; Doug Goldstein <cardoe@gentoo.org> -cairo-1.5.14.ebuild,
  cairo-1.5.16.ebuild, +cairo-1.5.18.ebuild:
  bump to latest cairo 1.6 release candidate. fix freetype depend

*cairo-1.5.16 (02 Apr 2008)

  02 Apr 2008; Doug Goldstein <cardoe@gentoo.org> -cairo-1.5.12.ebuild,
  +cairo-1.5.16.ebuild:
  bump to latest 1.6.0 release candidate

  27 Mar 2008; Doug Goldstein <cardoe@gentoo.org> cairo-1.5.12.ebuild,
  cairo-1.5.14.ebuild:
  TODO has gone away

*cairo-1.5.14 (24 Mar 2008)

  24 Mar 2008; Doug Goldstein <cardoe@gentoo.org> -cairo-1.5.10.ebuild,