@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/cairo-1.6.4.ebuild,v 1.2 2008/04/11 23:50:59 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/cairo-1.6.4.ebuild,v 1.4 2008/06/04 19:55:27 corsair Exp $
 
 EAPI="prefix"
 
@@ -12,7 +12,7 @@ SRC_URI="http://cairographics.org/releases/${P}.tar.gz"
 
 LICENSE="|| ( LGPL-2.1 MPL-1.1 )"
 SLOT="0"
-KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+KEYWORDS="~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
 IUSE="debug directfb doc glitz opengl svg test X xcb aqua"
 
 RDEPEND="media-libs/fontconfig
@@ -59,6 +59,8 @@ src_unpack() {
 }
 
 src_compile() {
+	local use_xcb
+
 	[[ ${CHOST} == *-interix* ]] && append-flags -D_REENTRANT -D_ALL_SOURCE
 	# http://bugs.freedesktop.org/show_bug.cgi?id=15463
 	[[ ${CHOST} == *-solaris* ]] && append-flags -D_POSIX_PTHREAD_SEMANTICS
@@ -70,13 +72,16 @@ src_compile() {
 		export glitz_LIBS=-lglitz-glx
 	fi
 
+	use_xcb="--disable_xcb"
+	use X && use xcb && use_xcb="--enable-xcb"
+
 	econf $(use_enable X xlib) $(use_enable doc gtk-doc) \
-	  	  $(use_enable directfb) \
-		  $(use_enable svg) $(use_enable glitz) $(use_enable X xlib-xrender) \
-		  $(use_enable debug test-surfaces) --enable-pdf  --enable-png \
-		  --enable-freetype --enable-ps $(use_enable xcb) \
-		  $(use_enable aqua quartz) $(use_enable aqua atsui) \
-		  || die "configure failed"
+		$(use_enable directfb) ${use_xcb} \
+		$(use_enable svg) $(use_enable glitz) $(use_enable X xlib-xrender) \
+		$(use_enable debug test-surfaces) --enable-pdf  --enable-png \
+		--enable-freetype --enable-ps \
+		$(use_enable aqua quartz) $(use_enable aqua atsui) \
+		|| die "configure failed"
 
 	emake || die "compile failed"
 }
